# aiti-guru-test

./: .dockerignore  .editorconfig  .gitignore  README.md  answers.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  Dockerfile.migrations  __init__.py  alembic.ini  main.py
api/alembic/: env.py
api/alembic/versions/: caad4c293ca3_init.py
api/core/: __init__.py  config.py
api/db/: __init__.py  connection.py  session.py
api/models/: __init__.py  orders.py  products.py
api/schemas/: __init__.py  orders.py
api/v1/: __init__.py  orders.py
scripts/: run_migrations.sh  run_tests.sh
tests/: conftest.py  test_orders.py
