[tool.poetry]
name = "aiti-guru-test"
version = "0.0.1"
description = "REST API сервис для управления заказами и товарами"
authors = ["Nikita Volkov <nikitavolkovpydev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.120.1"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
sqlalchemy = "^2.0.44"
alembic = "^1.17.0"
asyncpg = "^0.30.0"
pydantic = "^2.12.3"
pydantic-settings = "^2.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

